upd styles and content

--- a/src/pages/L-SH-2024.html
+++ b/src/pages/L-SH-2024.html
@@ -24,10 +24,10 @@
         </div>
 
         <p>
-          Лаборатория – это атмосферный лекторий под соснами и среда для
-          коллективного творчества, а также для создания собственных science art
-          проектов. Обучение будет проходить в формате интенсива на протяжении
-          10 дней (предусмотрен один выходной).
+          Лаборатория – это атмосферный лекторий под соснами и среда
+          для&nbsp;коллективного творчества, а также для создания собственных
+          science art проектов. Обучение будет проходить в формате интенсива на
+          протяжении 10 дней (предусмотрен один выходной).
         </p>
       </section>
 
@@ -55,10 +55,7 @@
         <h2>Преподаватели</h2>
         <div>
           <div class="lector">
-            <img
-              src="https://www.ptichka.ru/data/cache/2019jul/17/30/97110_50709.jpg"
-              alt=""
-            />
+            <img src="../images/lectors/MPuchkov.jpeg" alt="" />
             <h3>Михаил Пучков</h3>
             <p>
               автор акустических и электроакустических музыкальных композиций,
@@ -72,10 +69,7 @@
             </p>
           </div>
           <div class="lector">
-            <img
-              src="https://www.ptichka.ru/data/cache/2019jul/17/30/97110_50709.jpg"
-              alt=""
-            />
+            <img src="../images/lectors/IDianov.jpg" alt="" />
             <h3>Иван Дианов</h3>
             <p>
               генеративный художник, с помощью кода он исследует процессы,
@@ -85,10 +79,7 @@
             </p>
           </div>
           <div class="lector">
-            <img
-              src="https://www.ptichka.ru/data/cache/2019jul/17/30/97110_50709.jpg"
-              alt=""
-            />
+            <img src="../images/lectors/DSoshnikov.jpg" alt="" />
             <h3>Дмитрий Сошников</h3>
             <p>
               кандидат физико-математических наук, доцент МАИ/НИУ ВШЭ,
@@ -98,10 +89,7 @@
             </p>
           </div>
           <div class="lector">
-            <img
-              src="https://www.ptichka.ru/data/cache/2019jul/17/30/97110_50709.jpg"
-              alt=""
-            />
+            <img src="../images/lectors/IMosygin.jpg" alt="" />
             <h3>Игорь Мосягин</h3>
             <p>
               Data-* разработчик. Кандидат физ.-мат. наук (физика твёрдого
@@ -112,10 +100,7 @@
             </p>
           </div>
           <div class="lector">
-            <img
-              src="https://www.ptichka.ru/data/cache/2019jul/17/30/97110_50709.jpg"
-              alt=""
-            />
+            <img src="../images/lectors/VGromova.jpg" alt="" />
             <h3>Владлена Громова</h3>
             <p>
               российская художница, Лауреатка конкурса «Премия Кандинского» в
@@ -128,9 +113,25 @@
       <section id="studentsCase">
         <h2>Студенты</h2>
         <ul>
-          <li>Биба Бибович</li>
-          <li>Боба Бобович</li>
-          <li>Буба Бубубу</li>
+          <li>Юля Антохина</li>
+          <li>Надежда Страхова</li>
+          <li>Ольга Надей</li>
+          <li>Михаил Пучков</li>
+          <li>Ольга Черных</li>
+          <li>Лилия Имамутдинова</li>
+          <li>Кирилл Дик feat. Хельге фон Кох</li>
+          <li>Есения Ли</li>
+          <li>Алёна Чикунова</li>
+          <li>Александр Крупин</li>
+          <li>Фёдор Светлов</li>
+          <li>Алиса Гайворонская</li>
+          <li>Вячеслав Пятаков</li>
+          <li>Анна Манвелян</li>
+          <li>Катарина Коммер</li>
+          <li>Эллина Куцевал</li>
+          <li>Евгения Воронцова</li>
+          <li>Наталья Греля</li>
+          <li>Алиса Кузнецова</li>
         </ul>
       </section>
 
