--- a/src/index.html
+++ b/src/index.html
@@ -5,35 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body class="popup hvrCard">
-    <!-- <div class="gradient">
-      <svg xmlns="http://www.w3.org/2000/svg">
-        <defs>
-          <filter id="goo">
-            <feGaussianBlur
-              in="SourceGraphic"
-              stdDeviation="10"
-              result="blur"
-            />
-            <feColorMatrix
-              in="blur"
-              mode="matrix"
-              values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -8"
-              result="goo"
-            />
-            <feBlend in="SourceGraphic" in2="goo" />
-          </filter>
-        </defs>
-      </svg>
-      <div class="gradients-container">
-        <div class="g1"></div>
-        <div class="g2"></div>
-        <div class="g3"></div>
-        <div class="g4"></div>
-        <div class="g5"></div>
-        <div class="interactive"></div>
-      </div>
-    </div> -->
-    <!-- <div class="logo"></div> -->
     <div id="page-container">
       <div id="logo">Loading...</div>
     </div>
@@ -73,7 +44,10 @@
         </a>
       </section>
 
-      <footer></footer>
+      <footer>
+        <div class="icon"></div>
+        <div class="icon"></div>
+      </footer>
     </div>
   </body>
 </html>
