--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,20 @@
 
     <div id="wrapper">
       <header>
-        <nav></nav>
+        <nav>
+          <a href="index.html">Главная</a>
+          <a href="pages/L-SH-2025.html">ЛШ 2025</a>
+          <a href="pages/L-SH-2024.html">ЛШ 2024</a>
+        </nav>
       </header>
 
       <section></section>
 
       <section id="projects">
-        <div class="project" href="pages/L-SH-2025.html">
-          <div class="projectIMG"></div>
+        <a class="project" href="pages/L-SH-2025.html">
+          <div class="projectIMG">
+            <!-- <img src="images/helloLSH.png" alt="" /> -->
+          </div>
           <div class="projectInfo">
             <div><p class="progectTag">июль 2025</p></div>
             <h2>Летняя Школа <br />на Волге 2025</h2>
@@ -28,10 +34,10 @@
             </p>
             <p>→ → → → → → → → → → → → → → → → → → → → → →</p>
           </div>
-        </div>
+        </a>
 
         <a class="project" href="pages/L-SH-2024.html">
-          <div class="projectIMG"></div>
+          <div class="projectIMG saturn"></div>
           <div class="projectInfo">
             <div><p class="progectTag">июль 2024</p></div>
             <h2>Летняя Школа <br />на Волге 2024</h2>
@@ -45,8 +51,12 @@
       </section>
 
       <footer>
-        <div class="icon"></div>
-        <div class="icon"></div>
+        <a href="https://t.me/this_is_science_art">
+          <div class="icon tg"></div>
+        </a>
+        <a href="https://vk.com/labscienceart">
+          <div class="icon vk"></div>
+        </a>
       </footer>
     </div>
   </body>
