--- a/src/pages/L-SH-2024.html
+++ b/src/pages/L-SH-2024.html
@@ -10,9 +10,13 @@
     </div>
 
     <div id="wrapper">
-      <!-- <header>
-        <nav></nav>
-      </header> -->
+      <header>
+        <nav>
+          <a href="../index.html">Главная</a>
+          <a href="L-SH-2025.html">ЛШ 2025</a>
+          <a href="L-SH-2024.html">ЛШ 2024</a>
+        </nav>
+      </header>
 
       <section id="aboutCase">
         <div class="flex">
@@ -135,7 +139,14 @@
         </ul>
       </section>
 
-      <footer></footer>
+      <footer>
+        <a href="https://t.me/this_is_science_art">
+          <div class="icon tg"></div>
+        </a>
+        <a href="https://vk.com/labscienceart">
+          <div class="icon vk"></div>
+        </a>
+      </footer>
     </div>
   </body>
 </html>
